[metadata]
name = metabo_adni
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    requests
    importlib-metadata; python_version < "3.9"

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        read_files = metabo_adni.__main__:main
