[metadata]
name = metabo_adni
version = 0.1.0

[options]
package_dir =
    = src
packages = find:
python_requires = <= 3.9.13
install_requires = 
    pandas >= 1.4.2
    pingouin == 0.5.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        clean_files = metabo_adni.__main__:main
