[metadata]
name = metabo_adni
version = 0.5.2
description = Metabolomics data processing for the ADNI data sets.
long_description = file: README.md
long_description_content_type = text/markdown
license = GNU General Public License v3.0
author = Tomas Gonzalez Zarzar
author_email = tomasgzarzar@pm.me
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
url = https://github.com/tomszar/metabo_adni

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3
install_requires = 
    pandas >= 1.4.2
    pingouin == 0.5.2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
        clean_files = metabo_adni.__main__:main
